<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.amjadalmutairi.todo.MainActivity"
    android:background="@color/close_to_white">

    <LinearLayout
        android:id="@+id/category_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp_10"
        android:padding="@dimen/dp_5"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:padding="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_10">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_reading"
                android:padding="@dimen/dp_5"/>
            <TextView
                android:id="@+id/to_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/category_title"
                android:text="@string/reading_category_"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:padding="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_10">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_watching"
                android:padding="@dimen/dp_10"/>
            <TextView
                android:id="@+id/to_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/category_title"
                android:text="@string/watching_category_"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:padding="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_10">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_doing"
                android:padding="@dimen/dp_10"/>
            <TextView
                android:id="@+id/to_do"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/category_title"
                android:text="@string/doing_category_"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dp_5"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/rights"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_15"
            android:gravity="center_vertical"/>
        <ImageButton
            android:id="@+id/about_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_about"
            android:contentDescription="@string/about"
            android:tint="@color/colorPrimary"
            android:background="@drawable/white_rounded_rec"
            android:layout_margin="@dimen/dp_2"
            android:padding="@dimen/dp_5"/>
        <ImageButton
            android:id="@+id/share_button"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_share"
            android:tint="@color/colorPrimary"
            android:background="@drawable/white_rounded_rec"
            android:layout_margin="@dimen/dp_2"
            android:padding="@dimen/dp_5"
            android:contentDescription="@string/share" />
    </LinearLayout>
</RelativeLayout>
